# datapizza-ai-main

./: pyproject.toml  pyrightconfig.json
datapizza-ai-vectorstores/datapizza-ai-vectorstores-pgvector/: README.md  pyproject.toml
datapizza-ai-vectorstores/datapizza-ai-vectorstores-pgvector/datapizza/vectorstores/pgvector/: __init__.py  pgvector_vectorstore.py
datapizza-ai-vectorstores/datapizza-ai-vectorstores-pgvector/datapizza/vectorstores/pgvector/tests/: test_pgvector_functional.py  test_pgvector_smoke.py  test_pgvector_stress.py  test_pgvector_unit.py
datapizza-ai-vectorstores/datapizza-ai-vectorstores-pgvector/datapizza/vectorstores/pgvector_store/: __init__.py  pgvector_store.py
datapizza-ai-vectorstores/datapizza-ai-vectorstores-pgvector/datapizza/vectorstores/pgvector_store/tests/: test_pgvector_store.py
